z-index fix

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -77,6 +77,7 @@
     padding: 1rem;
     border-radius: 8px;
     position: relative;
+    z-index: -1;
 
     &:hover {
       transform: translateY(-5px);
